<resources>
    <string name="app_name">At Antwerp</string>
    <string name="hint_search">Search</string>
    <string name="Text_search">Search</string>
    <string name="HomeScreen_Title">Welcome To Antwerp</string>
    <string name="HomeScreen_SubTitle">Zoek op categorie zoals nieuws, feest</string>
    <string name="Description_homepicture">HomePicture</string>
    <string name="Description_searchbalk">Searchbalk</string>
    <string name="titel_1">Titel 1</string>
    <string name="nieuws">Nieuws</string>
    <string name="NieuwsTab_tekst">******************************************************************************************************************</string>
    <string name="titel_2">Titel 2</string>
    <string name="foto_artikel1">Foto_Artikel1</string>
    <string name="nieuws_artikel2">Nieuws_Artikel2</string>
    <string name="Bekend_Titel2">Titel2</string>
    <string name="Bekend_titel1">Titel1</string>
    <string name="bekende_plaatsen_HoofdtitelTekst">Bekende Plaatsen</string>
    <string name="eten_drinken"><![CDATA[Eten & Drinken]]></string>
    <string name="restaurant_a">Restaurant A</string>
    <string name="reviews">Reviews</string>
    <string name="caf_b">Café B</string>
    <string name="todo">TODO</string>
    <string name="feesten_HoofdTitel">Feesten</string>
    <string name="feestje_1">Feestje 1</string>
    <string name="concept">Concept</string>
    <string name="data">Data</string>
    <string name="feestje_2">Feestje 2</string>

    <string name="nieuws_Button">NIEUWS</string>
    <string name="bekende_plaatsen_Button">Bekende Plaatsen</string>
    <string name="Eten_Drinken_Button"><![CDATA[Eten & Drinken]]></string>
    <string name="party_Button">Party</string>
    <string name="Feesten_label">Feesten</string>
    <string name="label_horeca">Horeca</string>
    <string name="label_toerisme">Toerisme</string>
    <string name="label_nieuws">Nieuws</string>
    <string name="HomePage_Tekst">Een stad die enkel maar groeit, plaatsen om te ontdekken en eten voor de lekkerbekken.</string>
    <string name="InfoPage_title">title</string>
    <string name="InfoPage_tekst">lots of text</string>
    <string name="Infpage_openWeb">open website</string>
    <string name="InfoPage_OpenMaps">open googlemaps</string>
    <string name="InfoPage_picDescript">PicToReplace</string>
</resources>